2015-08-18  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * khmer/khmer_args.py: Replaced sanitize_epilog() with santize_help() that
   reflows the text of ArgParse descriptions and epilog while preserving the
   formatting. Enhanced removal of Sphinx directives by replacing double
   backticks with the double quote character.
   * scripts/*.py: Renamed sanitize_epilog to sanitize_help; leading newlines
   from triple-quoted epilogs removed; formatting made consistent;
   sanitize_help and ComboFormatter added where it was missing; a couple
   script specific epilog reformatting (for use of `:doc:` and a
   hyperlink).
   * scripts/{count-median,filter-abund-single}.py: Fixed printing of output
   file name to do so instead of printing information about the file handle.
   * scripts/count-median.py: Added missing command so that example given
   actually works.
   * scripts/filter-abund-single.py: Removed redundant printing of output file
   names.
   * scripts/normalize-by-median.py: Removed unused option "-d" from an example
   command (left over from the "--dump-frequency" era).
   * scripts/{partition-graph.py,do-partition.py}: Fixed erasure of the queue
   module name in the worker functions, which is necessary for basic
   functionality.
   * scripts/do-partition.py: added an example command to the epilog

2015-08-17  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * Makefile: remove BASH shell designation that appears to be incompatible
   with OS X Mavericks & virtualenv; refactored out BASH-isms for those whose
   default shell isn't BASH (Debian, and others).
   * lib/test-read-aligner.cc,read_aligner_test.sh: removed unused test files
   found during search for other shell scripts with BASHisms.

2015-08-18  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * *: reverted load-into-counting.py -> load-into-countgraph.py and
   load-graph.py -> load-into nodegraph.py rename.
   * CITATION: unescaped URL